--- a/pruebas_woocomerce/src/app/app.component.html
+++ b/pruebas_woocomerce/src/app/app.component.html
@@ -1,6 +1,1 @@
-<h2>Lista de productos</h2>
-<ul>
-  <li *ngFor="let producto of productos">
-    {{ producto.name }} - {{ producto.price }}€
-  </li>
-</ul>
+<app-lista-productos></app-lista-productos>
