--- a/pruebas_woocomerce/src/app/componentes/portada/portada.component.html
+++ b/pruebas_woocomerce/src/app/componentes/portada/portada.component.html
@@ -1,13 +1,24 @@
-<section class="hero">
-    <div class="hero-content">
-      <h1>Bienvenido a Mi Tienda Online</h1>
-      <br>
-      <p>Los mejores productos, al mejor precio. <br> ¡Compra fácil, rápido y seguro!</p>
-      <br>
-      <a routerLink="Productos" routerLinkActive="active" class="boton-hero">Ver productos</a>
-    </div>
-    <br>
-  </section>
+
+<!-- Bloque 1: Banner grande -->
+<section class="bloque-banner">
+  <h2>Acabemos con la <span>old technoleague </span></h2>
+  <p>Únete a la lucha contra la old technoleague y renueva ese viejo telefono </p>
+  <p>Obsrva los mejores moviles a los peores precios,  <br> ¡No es normal lo bajos que estan esos precios!</p>
+  <a routerLink="Productos" routerLinkActive="active" class="boton-banner">Ve los productos</a>
+</section>
+
+<!-- Bloque 2: Texto destacado -->
+<section class="bloque-texto">
+  <h2>Sácale partido a la tecnología con nosotros</h2>
+  <p>Compra con responsabilidad, calidad y buenos precios.</p>
+</section>
+
+<!-- Bloque 3: Otro contenido como productos o mapa -->
+<section class="bloque-contenido">
+  <!-- Aquí puedes meter productos, mapas, sliders, lo que quieras -->
+</section>
+
+
   <section class="maps">
     <div class="texto-mapa">
       <h2>Encuéntranos aquí</h2>
