--- a/pruebas_woocomerce/src/app/app.component.html
+++ b/pruebas_woocomerce/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
-<router-outlet/>
-<app-footer></app-footer>
+<div class="contenedor-principal">
+    <div class="bloque">
+        <app-header></app-header>
+        <router-outlet/>
+        <app-footer></app-footer>
+    </div>
