--- a/pruebas_woocomerce/src/app/componentes/header/header.component.css
+++ b/pruebas_woocomerce/src/app/componentes/header/header.component.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #007bff;
     padding: 15px 30px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-family: 'Segoe UI', sans-serif;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   }
@@ -27,7 +26,7 @@
   }
   
   .menu a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     margin-left: 20px;
     font-weight: 500;
