--- a/pruebas_woocomerce/src/app/componentes/portada/portada.component.css
+++ b/pruebas_woocomerce/src/app/componentes/portada/portada.component.css
@@ -1,66 +1,68 @@
-  .hero {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    min-height: 200px;
-    background-image: url('https://www.e-strategic.fr/wp-content/uploads/2018/10/Cross-Canal-2-1000x500.jpg');
-      background-size: cover;
-      background-position: center;
-  }
   
-  .hero-content {
-    text-align: center;
-  }
-  
-  /* Título principal con efecto "Spring" */
-  .hero-content h1 {
-    font-family: 'Pacifico', cursive;
-    font-size: 3rem;
-    color: #007bff;;
-    background: none;
-    position: center;
-    display: inline-block;
-    margin-bottom: 0.2em;
-    text-shadow: /* base */
-      4px 4px 0 #f05050
-  }
-  
-  /* Subtítulo con efecto "vibes" */
-  .hero-content p {
-    font-family: 'Baloo 2', cursive;
-    font-size: 2.8rem;
-    color: #f05050;
-    margin-top: 0;
-    margin-bottom: 1.2em;
-    display: inline-block;
-    background: none;
-    text-shadow:
-    3px 3px 0 #007bff;
-  }
-  
-  /* Botón */
-  .boton-hero {
-    font-family: 'Baloo 2', cursive;
-    background: #007bff;;
-    color: #fff;
-    border: none;
-    padding: 0.8em 2em;
-    font-size: 1.2rem;
-    border-radius: 40px;
-    cursor: pointer;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .boton-hero:hover {
-    background:#f05050;
-  }
+
+  /* General */
+section {
+  padding: 60px 40px;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+/* Bloque tipo banner */
+.bloque-banner {
+  background-color: #f6f1eb;
+  text-align: center;
+  padding: 80px 20px;
+  border-radius: 10px;
+}
+
+.bloque-banner h2 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.bloque-banner h2 span {
+  font-style: italic;
+  color: #0d1b2a;
+}
+
+.bloque-banner p {
+  margin-top: 15px;
+  font-size: 1.1rem;
+}
+
+.boton-banner {
+  display: inline-block;
+  margin-top: 25px;
+  background-color: #0d1b2a;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+/* Bloque de texto destacado */
+.bloque-texto {
+  background-color: #acabab;
+  text-align: center;
+  padding: 80px 20px;
+  border-radius: 10px;
+}
+
+.bloque-texto h2 {
+  font-size: 2.2rem;
+  font-weight: 700;
+}
+
+.bloque-texto p {
+  font-size: 1.1rem;
+  margin-top: 10px;
+}
+
+/* Puedes seguir agregando bloques similares */
+
   .maps {
     
-    margin-top: 30px; /* separación hacia arriba */
     display: flex;
     justify-content: flex-start; /* manda el mapa a la derecha */
     padding-right: 40px; /* espacio del borde derecho */
