--- a/pruebas_woocomerce/src/app/componentes/header/header.component.html
+++ b/pruebas_woocomerce/src/app/componentes/header/header.component.html
@@ -7,6 +7,7 @@
       <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Inicio</a>
       <a routerLink="Productos" routerLinkActive="active">Productos</a>
       <a href="#">Contacto</a>
+      <a routerLink="Carrito" routerLinkActive="active">Carrito</a>
     </nav>
   </header>
   
