--- a/pruebas_woocomerce/src/app/app.component.html
+++ b/pruebas_woocomerce/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="contenedor-principal">
+<div class="to">
     <div class="bloque">
         <app-header></app-header>
         <router-outlet/>
