--- a/pruebas_woocomerce/src/app/componentes/portada/portada.component.html
+++ b/pruebas_woocomerce/src/app/componentes/portada/portada.component.html
@@ -11,13 +11,8 @@
 <section class="bloque-texto">
   <h2>Sácale partido a la tecnología con nosotros</h2>
   <p>Compra con responsabilidad, calidad y buenos precios.</p>
+  <h3>Aprovecha nuestro cupon de descuento de 20%</h3>
 </section>
-
-<!-- Bloque 3: Otro contenido como productos o mapa -->
-<section class="bloque-contenido">
-  <!-- Aquí puedes meter productos, mapas, sliders, lo que quieras -->
-</section>
-
 
   <section class="maps">
     <div class="texto-mapa">
@@ -27,10 +22,9 @@
         <br> Mairena del Alcor (Sevilla)
       </p>
     </div>
-    <!-- google-map-demo.component.html -->
+
 <google-map
-height="400px"
-width="750px"
+
 [center]="center"
 [zoom]="zoom"
 (mapClick)="addMarker($event)">
