--- a/pruebas_woocomerce/src/app/componentes/header/header.component.css
+++ b/pruebas_woocomerce/src/app/componentes/header/header.component.css
@@ -24,6 +24,11 @@
     font-size: 20px;
     font-weight: bold;
   }
+  .logo a {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+  }
+
   
   .menu a {
     color: rgb(0, 0, 0);
@@ -33,7 +38,12 @@
     transition: color 0.3s;
   }
   
-  .menu a:hover {
+  .menu a:hover, .logo a:hover {
     color: #d1eaff;
   }
   
+  img {
+    width: 30px;
+    height: 30px;
+    border-radius: 40%;
+  }
