descripcion y carruserl imagenes sin terminar

--- a/pruebas_woocomerce/src/app/componentes/lista-productos/lista-productos.component.css
+++ b/pruebas_woocomerce/src/app/componentes/lista-productos/lista-productos.component.css
@@ -42,7 +42,7 @@ h2 {
 
   li .boton {
     margin-top: 15px;
-    background-color: #007acc;
+    background-color: #fd8b20;
     color: white;
     border: none;
     padding: 10px 18px;
@@ -59,3 +59,21 @@ h2 {
     transform: scale(1.05);
   }
   
+  li .botonn {
+    margin-top: 15px;
+    background-color: #007acc;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    font-size: 14px;
+    font-family: 'Segoe UI', sans-serif;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, transform 0.2s;
+  }
+  
+  li .botonn:hover {
+    background-color: #fd8b20;
+    transform: scale(1.05);
+  }
