--- a/pruebas_woocomerce/src/app/componentes/lista-productos/lista-productos.component.html
+++ b/pruebas_woocomerce/src/app/componentes/lista-productos/lista-productos.component.html
@@ -12,6 +12,7 @@
     /><br />
     {{ producto.price }}€
     <br>
+    <button class="botonn">Ver detalles del producto</button>
     <button class="boton" (click)="agregarAlCarrito(producto)">Añadir a carrito</button>
   </li>
 </ul>
