--- a/pruebas_woocomerce/src/app/componentes/lista-productos/descripcion/descripcion.component.html
+++ b/pruebas_woocomerce/src/app/componentes/lista-productos/descripcion/descripcion.component.html
@@ -5,7 +5,7 @@
     <br />
     <img
       *ngIf="producto.images.length > 0"
-      [src]="producto.images[0].src"
+      [src]="producto.images[currentImageIndex].src"
       width="100"
     /><br />
     {{ producto.price }}€
