actualizaciones carrito y descripcion

--- a/pruebas_woocomerce/src/app/componentes/carrito/carrito.component.html
+++ b/pruebas_woocomerce/src/app/componentes/carrito/carrito.component.html
@@ -19,6 +19,6 @@
             </tr>
         </tbody>
     </table>
-    <button class="boton-agregar" (click)="vaciarCarrito()"> Vaciar carrito</button>
+    <button class="boton-agregar" (click)="vaciarCarrito()" (click)="mostrarAlerta()"> Vaciar carrito</button>
 </div>
 </section>
