--- a/pruebas_woocomerce/src/app/componentes/footer/footer.component.css
+++ b/pruebas_woocomerce/src/app/componentes/footer/footer.component.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #007bff;
+    background-color: #484780;
     color: white;
     padding: 20px 30px;
     text-align: center;
