--- a/pruebas_woocomerce/src/app/componentes/header/header.component.css
+++ b/pruebas_woocomerce/src/app/componentes/header/header.component.css
@@ -7,7 +7,16 @@
     font-family: 'Segoe UI', sans-serif;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   }
-  
+  .titulo {
+    font-size: 20px;
+    font-weight: bold;
+  }
+   a {
+    text-decoration: none;
+    color: #1c1c1c;
+    text-align: left;
+  }
+  /* 
   .logo {
     display: flex;
     align-items: center;
@@ -46,4 +55,86 @@
     width: 30px;
     height: 30px;
     border-radius: 40%;
-  }
+  } */
+
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.logo {
+    max-width: 5rem;
+}
+
+.nav-list {
+    list-style-type: none;
+    display: flex;
+    gap: 1rem;
+}
+
+.nav-list li a {
+    text-decoration: none;
+    color: #1c1c1c;
+}
+
+.abrir-menu,
+.cerrar-menu {
+    display: none;
+}
+
+@media screen and (max-width: 750px) {
+    .abrir-menu,
+    .cerrar-menu {
+        display: block;
+        border: 0;
+        cursor: pointer;
+        font-size: 25px;      /* Tamaño del símbolo */
+        width: 20px;          /* Ancho del botón */
+        height: 20px;
+    }
+
+    
+      .abrir-menu {
+        background-color: rgb(0, 0, 0);
+        color: black;
+        
+      }
+      
+    
+
+    .cerrar-menu {
+        color: #ececec;
+    }
+
+    .nav {
+        opacity: 0;
+        visibility: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 1rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #1c1c1c;
+        padding: 2rem;
+        box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
+    }
+
+    .nav.visible {
+        opacity: 1;
+        visibility: visible;
+    }
+    
+    .nav-list {
+        flex-direction: column;
+        align-items: end;
+    }
+
+    .nav-list li a {
+        color: #ecececec;
+    }
+}
